--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -1248,3 +1248,97 @@
 	url = {https://www.sciencedirect.com/science/article/pii/0021869364900183},
 	author = {G.M Kelly},
 }
+
+@article{gmw-1991,
+	author = {Goldreich, Oded and Micali, Silvio and Wigderson, Avi},
+	title = {Proofs that yield nothing but their validity or all languages in NP
+	         have zero-knowledge proof systems},
+	year = {1991},
+	issue_date = {July 1991},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {38},
+	number = {3},
+	issn = {0004-5411},
+	url = {https://doi.org/10.1145/116825.116852},
+	doi = {10.1145/116825.116852},
+	journal = {J. ACM},
+	month = {jul},
+	pages = {690–728},
+	numpages = {39},
+	keywords = {NP, cryptographic protocols, fault tolerant distributed computing,
+	            graph isomorphism, interactive proofs, methodological design of
+	            protocols, one-way functions, proof systems, zero-knowledge},
+}
+
+@inproceedings{vadhan-2007,
+	author = {Vadhan, Salil},
+	title = {The Complexity of Zero Knowledge},
+	year = {2007},
+	isbn = {978-3-540-77049-7},
+	publisher = {Springer-Verlag},
+	address = {Berlin, Heidelberg},
+	url = {https://doi.org/10.1007/978-3-540-77050-3_5},
+	doi = {10.1007/978-3-540-77050-3_5},
+	abstract = {We give an informal introduction to zero-knowledge proofs, and
+	            survey their role both in the interface between complexity theory
+	            and cryptography and as objects of complexity-theoretic study in
+	            their own right.},
+	booktitle = {FSTTCS 2007: Foundations of Software Technology and Theoretical
+	             Computer Science: 27th International Conference, New Delhi, India,
+	             December 12-14, 2007. Proceedings},
+	pages = {52–70},
+	numpages = {19},
+	keywords = {Proof System, Commitment Scheme, Interactive Proof, Probabilistic
+	            Polynomial Time, Interactive Proof System},
+	location = {New Delhi, India},
+}
+
+@article{goldreich-1994,
+	title = {Definitions and properties of zero-knowledge proof systems},
+	author = {Goldreich, Oded and Oren, Yair},
+	journal = {Journal of Cryptology},
+	volume = {7},
+	number = {1},
+	pages = {1--32},
+	year = {1994},
+	publisher = {Springer},
+}
+
+@inproceedings{ben-or-et-al-1990,
+	author = "Ben-Or, Michael and Goldreich, Oded and Goldwasser, Shafi and H{\aa}
+	          stad, Johan and Kilian, Joe and Micali, Silvio and Rogaway, Phillip",
+	editor = "Goldwasser, Shafi",
+	title = "Everything Provable is Provable in Zero-Knowledge",
+	booktitle = "Advances in Cryptology --- CRYPTO' 88",
+	year = "1990",
+	publisher = "Springer New York",
+	address = "New York, NY",
+	pages = "37--56",
+	abstract = "Assuming the existence of a secure probabilistic encryption scheme
+	            , we show that every language that admits an interactive proof
+	            admits a (computational) zero-knowledge interactive proof. This
+	            result extends the result of Goldreich, Micali and Wigderson, that,
+	            under the same assumption, all of NP admits zero-knowledge
+	            interactive proofs. Assuming envelopes for bit commitment, we show
+	            tht every language that admits an interactive proof admits a
+	            perfect zero-knowledge interactive proof.",
+	isbn = "978-0-387-34799-8",
+}
+
+@inproceedings{bv-2010,
+	author = "Birrell, Eleanor and Vadhan, Salil",
+	editor = "Micciancio, Daniele",
+	title = "Composition of Zero-Knowledge Proofs with Efficient Provers",
+	booktitle = "Theory of Cryptography",
+	year = "2010",
+	publisher = "Springer Berlin Heidelberg",
+	address = "Berlin, Heidelberg",
+	pages = "572--587",
+	abstract = "We revisit the composability of different forms of zero- knowledge
+	            proofs when the honest prover strategy is restricted to be
+	            polynomial time (given an appropriate auxiliary input). Our results
+	            are:",
+	isbn = "978-3-642-11799-2",
+}
+
