--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -77,6 +77,7 @@
 \input{category-theory}
 
 \chapter{Categorical Cryptography}
+\label{chap:categorical-cryptography}
 \input{categorical-cryptography.tex}
 
 \appendix
